# gitBooleans

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_parse_diff.cpp  main_show_diff.cpp  main_tests.cpp  mesh_booleans_inputcheck
arrangements/code/: intersection_classification.cpp
code/: intersect_custom.cpp  intersect_custom.h  intersect_point_rationals.cpp  intersect_point_rationals.h  rationals.cpp
data/: trimesh_viewer  union.ply
data/test/Horse/: horse-01-01.ply  horse-01-02.ply  horse-01-03.ply  horse-01-04.ply  horse-01.ply  horse-02.ply  horse-03.ply  horse-08.ply  horse-09.ply  horse-10.ply
mesh_booleans/: booleans.cpp  booleans.h
